--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^12.5.0",
 		"antd": "^4.9.2",
 		"axios": "^0.21.0",
+		"classnames": "^2.2.6",
 		"jwt-decode": "^3.1.2",
 		"node-sass": "^4.14.1",
 		"react": "^17.0.1",
